// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`airtableSingleResponseSchema A empty object 1`] = `
{
  "issues": [
    {
      "abortEarly": undefined,
      "abortPipeEarly": undefined,
      "expected": "string",
      "input": undefined,
      "issues": undefined,
      "kind": "schema",
      "lang": undefined,
      "message": "Invalid type: Expected string but received undefined",
      "path": [
        {
          "input": {},
          "key": "createdTime",
          "origin": "value",
          "type": "object",
          "value": undefined,
        },
      ],
      "received": "undefined",
      "requirement": undefined,
      "type": "string",
    },
    {
      "abortEarly": undefined,
      "abortPipeEarly": undefined,
      "expected": "Object",
      "input": undefined,
      "issues": undefined,
      "kind": "schema",
      "lang": undefined,
      "message": "Invalid type: Expected Object but received undefined",
      "path": [
        {
          "input": {},
          "key": "fields",
          "origin": "value",
          "type": "object",
          "value": undefined,
        },
      ],
      "received": "undefined",
      "requirement": undefined,
      "type": "object",
    },
    {
      "abortEarly": undefined,
      "abortPipeEarly": undefined,
      "expected": "string",
      "input": undefined,
      "issues": undefined,
      "kind": "schema",
      "lang": undefined,
      "message": "Invalid type: Expected string but received undefined",
      "path": [
        {
          "input": {},
          "key": "id",
          "origin": "value",
          "type": "object",
          "value": undefined,
        },
      ],
      "received": "undefined",
      "requirement": undefined,
      "type": "string",
    },
  ],
  "output": {},
  "success": false,
  "typed": false,
}
`;

exports[`airtableSingleResponseSchema B missing fields 1`] = `
{
  "issues": [
    {
      "abortEarly": undefined,
      "abortPipeEarly": undefined,
      "expected": "Object",
      "input": undefined,
      "issues": undefined,
      "kind": "schema",
      "lang": undefined,
      "message": "Invalid type: Expected Object but received undefined",
      "path": [
        {
          "input": {
            "createdTime": "2021-01-01T00:00:00.000Z",
            "fields": undefined,
            "id": "rec1234567890",
          },
          "key": "fields",
          "origin": "value",
          "type": "object",
          "value": undefined,
        },
      ],
      "received": "undefined",
      "requirement": undefined,
      "type": "object",
    },
  ],
  "output": {
    "createdTime": "2021-01-01T00:00:00.000Z",
    "fields": undefined,
    "id": "rec1234567890",
  },
  "success": false,
  "typed": false,
}
`;

exports[`airtableSingleResponseSchema C valid 1`] = `
{
  "issues": undefined,
  "output": {
    "createdTime": "2021-01-01T00:00:00.000Z",
    "fields": {
      "barcode": "1234567890",
      "box": "A",
      "brand": "Brand",
      "category": "Category",
      "details": "Details",
      "drawer": "Drawer",
      "location": "Location",
      "name": "Name",
      "ref-printed": true,
      "reference": "Reference",
      "status": "acheté",
      "updated-on": "2021-01-01T00:00:00.000Z",
    },
    "id": "rec1234567890",
  },
  "success": true,
  "typed": true,
}
`;
